--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.4",
     "prettier": "^1.19.1"
   },
   "devDependencies": {
